--- a/style.css
+++ b/style.css
@@ -3,5 +3,22 @@ html, body {
   height: 100vh;
   padding: 0;
   margin: 0;
+
+}
+
+* {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.legend {
+  padding: 5px;
+  background-color: rgba(0, 0, 0, 0.4);
+  margin-right: 0 !important;
+  border-radius: 0.375em;
+  border-top-right-radius: 0 !important;
+  border-bottom-right-radius: 0 !important;
+  color: white;
 }
 
